service ThriftClient {
    void seatsSold(1: i32 gameId, 2: i32 seatsCount);
}