struct UserDto {
    1: string username;
    2: string password;
}

struct GameDto {
    1: i32 gameId;
    2: string name;
    3: string homeTeam;
    4: string awayTeam;
    5: i32 availableSeats;
    6: i32 seatCost;
}
